--- a/Client-Side-Rendering/02.HTTP-Status-Cats/package.json
+++ b/Client-Side-Rendering/02.HTTP-Status-Cats/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "01.list-towns",
+  "name": "02.http-status-cats",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "directories": {
     "test": "tests"
@@ -13,6 +14,5 @@
   "license": "ISC",
   "dependencies": {
     "lit-html": "^2.4.0"
-  },
-  "description": ""
+  }
 }
